# ledgercore

./: .gitignore  Cargo.toml
.sqlx/: query-1e1f4264cb550d7b07704463e35196591ff23bbea6903c145f95525f3dc3b31e.json  query-297ef0c4d2550b8e8430f01a2ef8ae8370076acb8890766d77394f20b798186f.json  query-300ecfa41157c4fb049b197381c54a50c3d77b6a8cbe8daf6d44c87228304a4a.json  query-6f4e287618e0bac9e57b45923cb8a42483354e0aaaa5b5113771cc6163cf5b63.json  query-8f4fcffee30b5f74a880a60f7a928d6e4b3949c322bbc1f0b202afc09406495b.json  query-b9b6efc694ebed38ebe3e1edab62e3c4e7ec8e7f0a4996dfcf77a57d4a448261.json  query-c6a5d354c1eca94c42ba62aa1f2eb44e412305670ce287fda12af69f9ef5ff7e.json  query-e4a859a4a4487dab7028675784aa778ffe9dcffe647e431b2bd34f1740f80884.json  query-ec742f5a5144cf30679cdc13fb317cd8857765396131de999a006df439fd5699.json  query-f8f6cd3897d3941ec82a323dcd3c65d1497b15f75dc6bb2c5b1490c1c6c9e9d2.json
crates/app/: Cargo.toml
crates/app/src/: ledger.rs  lib.rs  ports.rs
crates/domain/: Cargo.toml
crates/domain/src/: account.rs  entry.rs  ids.rs  lib.rs  money.rs  transaction.rs
crates/infra-pg/: Cargo.toml
crates/infra-pg/src/: lib.rs  repo.rs  types.rs
crates/infra-pg/tests/: integration.rs
crates/ledger-svc/: Cargo.toml  build.rs
crates/ledger-svc/src/: adapters.rs  lib.rs  main.rs  service.rs  status.rs  wire.rs
crates/ledger-svc/tests/: grpc.rs
docs/: DESIGN-M0.md
migrations/: 0001_initial.sql  0002_role.sql
proto/: ledger.proto
