# ledgercore workspace.
#
# Members are added milestone by milestone (see docs/DESIGN-M*.md).
# Don't add a crate here until its milestone is in progress.

[workspace]
resolver = "2"
members = ["crates/domain", "crates/app", "crates/infra-pg", "crates/ledger-svc"]

# Centralised dependency versions. Each crate references these via
# `dep = { workspace = true }` so we pin one version across the workspace.
[workspace.dependencies]
rust_decimal = { version = "1", default-features = false, features = ["std"] }
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["std", "macros"] }
uuid = { version = "1", default-features = false, features = ["std", "v4"] }
async-trait = "0.1"

# IO / runtime deps for adapter crates only.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "sync", "signal"] }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "migrate",
    "rust_decimal",
    "time",
    "uuid",
] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json", "std"] }

# gRPC stack (used by ledger-svc only).
tonic = { version = "0.12", default-features = false, features = ["server", "channel", "codegen", "prost", "transport"] }
prost = "0.13"
prost-types = "0.13"
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"] }

# Edge-of-the-binary error type.
anyhow = "1"

# Dev-only deps (property tests).
proptest = "1"

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

# Profile tweaks — keep tests fast, release builds reasonable.
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
debug = false
